allowed-storage-classes-example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
  name: test
spec:
  containers:
  - image: nginx:alpine
    name: test
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: test
    persistentVolumeClaim:
      claimName: backupfile
  - name: testtwo
    persistentVolumeClaim:
      claimName: backupfiletwo
